_generated-doc/2.13/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query.adoc

:summaryTableId: quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_quarkus.hibernate-orm.query.query-plan-cache-max-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_quarkus.hibernate-orm.query.query-plan-cache-max-size[quarkus.hibernate-orm.query.query-plan-cache-max-size]`

[.description]
--
The maximum size of the query plan cache. see ++#++`QueryPlanCache++#++DEFAULT_QUERY_PLAN_MAX_COUNT`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`2048`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_quarkus.hibernate-orm.query.default-null-ordering]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_quarkus.hibernate-orm.query.default-null-ordering[quarkus.hibernate-orm.query.default-null-ordering]`

[.description]
--
Default precedence of null values in `ORDER BY` clauses.

Valid values are: `none`, `first`, `last`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUERY_DEFAULT_NULL_ORDERING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUERY_DEFAULT_NULL_ORDERING+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `first`, `last` 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_quarkus.hibernate-orm.-persistence-unit-name-.query.query-plan-cache-max-size]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_quarkus.hibernate-orm.-persistence-unit-name-.query.query-plan-cache-max-size[quarkus.hibernate-orm."persistence-unit-name".query.query-plan-cache-max-size]`

[.description]
--
The maximum size of the query plan cache. see ++#++`QueryPlanCache++#++DEFAULT_QUERY_PLAN_MAX_COUNT`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`2048`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_quarkus.hibernate-orm.-persistence-unit-name-.query.default-null-ordering]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query_quarkus.hibernate-orm.-persistence-unit-name-.query.default-null-ordering[quarkus.hibernate-orm."persistence-unit-name".query.default-null-ordering]`

[.description]
--
Default precedence of null values in `ORDER BY` clauses.

Valid values are: `none`, `first`, `last`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_DEFAULT_NULL_ORDERING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_DEFAULT_NULL_ORDERING+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `first`, `last` 
|`none`

|===